c/examples/writing-a-c-compiler-tests/tests/chapter_14/invalid_parse/cast_to_declarator.c
int main(void)
{
    // can only cast to declarator types, not abstract declarators
    return (int **a)(10);
}